--- a/sass/components/studio/_hero.scss
+++ b/sass/components/studio/_hero.scss
@@ -5,7 +5,7 @@
   padding-top: 120px;
   padding-bottom: 120px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../../../images/hero-mob-1x.jpg');
+    url('../images/hero-mob-1x.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -15,7 +15,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../../images/hero-mob-2x.jpg');
+      url('../images/hero-mob-2x.jpg');
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
