--- a/sass/components/studio/_hero.scss
+++ b/sass/components/studio/_hero.scss
@@ -19,27 +19,27 @@
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../../images/hero-tabl-1x.jpg');
+      url('../images/hero-tabl-1x.jpg');
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/hero-tabl-2x.jpg');
+        url('../images/hero-tabl-2x.jpg');
     }
     @media screen and (min-width: 1200px) {
       padding-top: 200px;
       padding-bottom: 200px;
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/hero-desk-1x.jpg');
+        url('../images/hero-desk-1x.jpg');
 
       @media screen and (min-device-pixel-ratio: 2),
         screen and (-webkit-min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-          url('../../../images/hero-desk-2x.jpg');
+          url('../images/hero-desk-2x.jpg');
       }
     }
   }
