--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,10 +4,6 @@
   background-color: var(--box-color);
   padding-top: 60px;
   padding-bottom: 60px;
-  @media screen and (min-width: 1200px) {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 }
 .footer__list {
   display: inline-block;
@@ -93,6 +89,9 @@
     width: 44px;
     height: 44px;
   }
+  @media screen and (min-width: 1200px) {
+    justify-content: start;
+  }
 }
 .footer__soc--link {
   width: 100%;
@@ -127,6 +126,9 @@
   text-transform: uppercase;
 
   color: var(--background-white-color);
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 .footer__soc--content {
   display: flex;
@@ -139,5 +141,6 @@
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 160px) / 3);
     margin-bottom: 0;
+    align-items: baseline;
   }
 }
