--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -115,8 +115,8 @@
     flex-direction: column;
     align-items: baseline;
     margin-left: auto;
-    margin-top: 18px;
-    margin-bottom: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     padding: 0;
 
     &__item:not(:last-child) {
@@ -124,8 +124,8 @@
     }
     &__link {
       font-weight: 500;
-      font-size: 14px;
-      line-height: 1.15;
+      font-size: 12px;
+      line-height: 1.16;
       letter-spacing: 0.02em;
       text-decoration: none;
       display: flex;
@@ -135,6 +135,10 @@
       transition: all var(--transition-animation);
 
       color: var(--maintext-color);
+      @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.15;
+      }
     }
     & .nav-contacts__link:hover,
     .nav-contacts__link:focus {
