--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
 }
 @media screen and (min-width: 480px) {
   .container {
